- [ADD] is an addition of a new feature
- [FIX] is a bug fix
- [MAINT] is a maintenance change for general improvement and proactive avoidance of potential issues

WARNING: Until version `1.0.0` there is a greater possibility of breaking changes.

== `0.x` changes

=== `0.2.11` (in progress)

- [FIX] Prevent initialization of global OpenTelemetry instance during programmatic build of OTLP exporter.
- Bump deps
* [MAINT] OpenTelemetry `1.55.0`, instrumentation `2.21.0`

=== `0.2.10` (2025-10-11)

- [FIX] Fixed some cases where HTTP route data was not set correctly when using the instrumentation agent.
- [FIX] Updated some defs to improve GraalVM native-image compatibility.
- [FIX] Updated docs and examples to use `otel.service.name` system property rather than `otel.resource.attributes` to add service name to resource.
- [ADD] Logs API support.
This enables a logging library to emit log records.
The Logs API is not intended for use by an application or general library.
- [ADD] `LoggerProvider` support in programmatic configuration of the SDK.
- [ADD] By default, populate span attribute for source code column number.
- [ADD] New options on `steffan-westcott.clj-otel.sdk.autoconfigure/init-otel-sdk!` to customise SDK components.
- Bump deps
* [MAINT] OpenTelemetry `1.54.1`, instrumentation `2.20.1`

=== `0.2.9` (2025-09-15)

- [FIX] [BREAK] Added option `:set-bound-context?` to `server-span-interceptors`, with default `false`.
Previously, bound context was always set, which prevented correct use of current context in subsequent processing.
- [FIX] In HTTP server spans, ensure values of multiple request headers with same name are captured as an array.
Also, do not normalize `-` to `_` in header names.
- [FIX] More robust processing of potentially incomplete Ring request maps to extract server span attributes.
- [FIX] To ensure HTTP/2 compatibility, read server name and port from Ring request map rather than `Host` header, which is mandatory in HTTP/1.1 only.