@@ -1,0 +1,8 @@
+;!zprint {:width 140}
+
+{:paths   ["src" "resources" "target/classes" "java"]
+ :deps    {org.clojure/clojure {:mvn/version "1.10.3"}
+           com.github.steffan-westcott/clj-otel-api {:local/root "../clj-otel-api"}}
+ :aliases {:release  {:override-deps {com.github.steffan-westcott/clj-otel-api {:mvn/version "0.2.11"}}}
+           :snapshot {:override-deps {com.github.steffan-westcott/clj-otel-api {:mvn/version "0.2.11-SNAPSHOT"}}}
+           :provided {:extra-deps {org.apache.logging.log4j/log4j-core {:mvn/version "2.25.2"}}}}}
