@@ -1,0 +1,1 @@
+steffan_westcott.clj_otel.adapter.log4j.CljOtelContextDataProvider
